# app/Http/Resources/TicketResource.php
@@ -40,17 +40,17 @@ class TicketResource extends JsonResource
         return [
             'id' => $this->id,
             'service_contract_id' => $this->service_contract_id,
-            'service_id' => $this->service->id,
-            'service_desc' => $this->service->description,
-            'company_id'=> $this->service_contract->company_id,
-            'company_name'=> $this->company->name,
+            'service_id' => $this->service->id ?? null,
+            'service_desc' => $this->service->description ?? null,
+            'company_id'=> $this->service_contract->company_id ?? null,
+            'company_name'=> $this->company->name ?? null,
             'title' => $this->title,
             'priority' => $this->priority,
             'needsHumanInteraction' => $this->needsHumanInteraction,
             'complexity' => $this->complexity,
             'user_id' => $this->user_id,
-            'user_name' => $this->user->name,
-            'user_lastname' => $this->user->lastname,
+            'user_name' => $this->user->name ?? null,
+            'user_lastname' => $this->user->lastname ?? null,
             'status' => $this->status,
             'newClientMessage' => $this->newClientMessage,
             'newTechnicianMessage' => $this->newTechnicianMessage,
